All_Component_DX/force-app/main/default/objects/Warranty__c/Warranty__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Object that stores warranty information for installed products. If the product or group of products is linked to an existing warranty template at the time of installed product creation, the warranty is automatically calculated. Warranty can also be created interactively for any installed product record by choosing an appropriate warranty template.</description>
    <label>Product Warranty</label>
    <nameField>
        <displayFormat>WN-{000000}</displayFormat>
        <label>Warranty ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Warranty</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>