All_Component_DX/force-app/main/default/objects/Warranty__c/fields/End_Date_Expenses_Covered__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Expenses_Covered__c</fullName>
    <description>Date on which expenses coverage ends</description>
    <inlineHelpText>Date on which expenses coverage ends</inlineHelpText>
    <label>End Date Expenses Covered</label>
    <type>Date</type>
</CustomField>