All_Component_DX/force-app/main/default/objects/Warranty__c/fields/End_Date_Material_Covered__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Material_Covered__c</fullName>
    <description>Date on which material coverage ends</description>
    <inlineHelpText>Date on which material coverage ends</inlineHelpText>
    <label>End Date Material Covered</label>
    <type>Date</type>
</CustomField>