All_Component_DX/force-app/main/default/objects/Warranty__c/fields/Exchange_type__c.field-meta.xml
<CustomField>
    <fullName>Exchange_type__c</fullName>
    <description>Type of exchange allowed in the warranty. Copied from warranty template</description>
    <label>Exchange type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advance Exchange</fullName>
            </value>
            <value>
                <fullName>Return Exchange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>