All_Component_DX/force-app/main/default/objects/Warranty__c/fields/Exclusions__c.field-meta.xml
<CustomField>
    <fullName>Exclusions__c</fullName>
    <description>A free format text to define any exceptions specifically applicable to this installed product</description>
    <inlineHelpText>Define any exceptions specifically applicable to this installed product</inlineHelpText>
    <label>Exclusions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>