All_Component_DX/force-app/main/default/objects/Warranty__c/fields/Expenses_Covered__c.field-meta.xml
<CustomField>
    <fullName>Expenses_Covered__c</fullName>
    <description>Percentage of other expenses covered by the warranty</description>
    <inlineHelpText>Percentage of other expenses covered by the warranty</inlineHelpText>
    <label>Expenses % Covered</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>