All_Component_DX/force-app/main/default/objects/Warranty__c/fields/Installed_Product__c.field-meta.xml
<CustomField>
    <fullName>Installed_Product__c</fullName>
    <description>Name of the installed product for which this warranty is applicable. Is a lookup to an existing installed product record in ServiceMax</description>
    <inlineHelpText>Name of the installed product for which this warranty is applicable. Is a lookup to an existing installed product record in ServiceMax</inlineHelpText>
    <label>Installed Product</label>
    <referenceTo>Installed_Product__c</referenceTo>
    <relationshipLabel>Product Warranty</relationshipLabel>
    <relationshipName>Warranty</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>