All_Component_DX/force-app/main/default/objects/Warranty__c/fields/RMA_Required__c.field-meta.xml
<CustomField>
    <fullName>RMA_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if an RMA is always required or an RMA is implied when this warranty is used to entitle a customer. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
    <inlineHelpText>Flag indicates if an RMA is always required or an RMA is implied when this warranty is used to entitle a customer. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
    <label>RMA Required</label>
    <type>Checkbox</type>
</CustomField>