All_Component_DX/force-app/main/default/objects/Warranty__c/fields/Service_Template__c.field-meta.xml
<CustomField>
    <fullName>Service_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the warranty template used to create a warranty. Is a lookup to an existing warranty template record</description>
    <inlineHelpText>Name of the warranty template used to create a warranty. Is a lookup to an existing warranty template record</inlineHelpText>
    <label>Warranty Terms</label>
    <referenceTo>Service_Template__c</referenceTo>
    <relationshipLabel>Product Warranty</relationshipLabel>
    <relationshipName>Warranty</relationshipName>
    <type>Lookup</type>
</CustomField>