All_Component_DX/force-app/main/default/objects/Warranty__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Warranty start date</description>
    <inlineHelpText>Warranty start date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>