All_Component_DX/force-app/main/default/objects/Warranty__c/fields/Transferable__c.field-meta.xml
<CustomField>
    <fullName>Transferable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if this warranty is transferable to other products under special circumstances. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
    <inlineHelpText>Flag indicates if this warranty is transferable to other products under special circumstances. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
    <label>Transferable</label>
    <type>Checkbox</type>
</CustomField>