All_Component_DX/force-app/main/default/objects/Warranty__c/fields/Travel_Covered__c.field-meta.xml
<CustomField>
    <fullName>Travel_Covered__c</fullName>
    <label>Travel % Covered</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>